# normal-form

./: Cargo.toml  README.md
src/: coloring.rs  lib.rs  rdf.rs  set.rs  tree.rs  utils.rs
src/set/: usize.rs
src/utils/: bijections.rs  matching.rs
tests/: rdf.rs
