[package]
name = "normal-form"
version = "0.1.1"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "A trait to easily find the canonical/normal form of graph structures."
categories = ["algorithms", "mathematics"]
keywords = ["graph", "group", "combinatorics", "canonical", "normal"]
repository = "https://github.com/timothee-haudebourg/normal-form"
documentation = "https://docs.rs/normal-form"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
derivative = "2.2.0"

[dev-dependencies]
rdf-types = "0.15.3"
grdf = "0.19.0"
rand = "0.8.5"